--- a/tonconnect-manifest.json
+++ b/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
-  "url": "https://your-blog.blogspot.com/p/presale.html",
+  "url": "https://btcbulltoken-vip.blogspot.com/",
   "name": "BtcBull Token Presale",
   "iconUrl": "https://your-blog.blogspot.com/favicon.ico",
   "termsOfUseUrl": "https://your-blog.blogspot.com/p/terms.html",
