--- a/tonconnect-manifest.json
+++ b/tonconnect-manifest.json
@@ -1,7 +1,7 @@
 {
   "url": "https://btcbulltoken-vip.blogspot.com/",
   "name": "BtcBull Token Presale",
-  "iconUrl": "https://your-blog.blogspot.com/favicon.ico",
+  "iconUrl": "https://btcbulltoken-vip.blogspot.com/favicon.ico",
   "termsOfUseUrl": "https://your-blog.blogspot.com/p/terms.html",
   "privacyPolicyUrl": "https://your-blog.blogspot.com/p/privacy.html"
 }
